# CCC

./: .gitignore  CMakeLists.txt  README.md  tags
src/: grammar.txt  lexer.cpp  main.cpp  parser.cpp  tags  utility.cpp  vm.cpp
src/include/: lexer.h  parser.h  utility.h  vm.h
tests/: integration_test.cpp  lexer_test.cpp  lexer_test_file.txt
